@@ -1,4 +1,4 @@
-rev 13-Jun_15-13_03
+rev 13-Jul_11-18_38
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -216,4 +216,7 @@ Added PHP's file upload errors to filebrowser.
 Accept image copy and paste with https urls.
 
 15 June
-Removed duplicate ~~COMPLEX_TABLES~~ macros
+Removed duplicate ~~CMPLEX_TABLES~~ macros
+
+11 July
+Added escapes to Plugin pattern regexes in edit.php, e.g. for '('
